--- a/source/jade/_layout.jade
+++ b/source/jade/_layout.jade
@@ -19,7 +19,9 @@ body
 			a(href="articles.html") Статьи
 			a(href="docs-item.html") Документ 
 			a(href="docs.html") Документы 
+			a(href="edit-interface.html") Редактирование
 			a(href="equipments-item.html") Оборудование
+			a(href="equipments-item-user.html") Оборудование пользователь
 			a(href="equipments.html") Оборудования
 			a(href="events-item.html") Событие 
 			a(href="events.html") События 
@@ -27,7 +29,9 @@ body
 			a(href="links.html") Ссылки 
 			a(href="lk.html") ЛК 
 			a(href="main.html") Главная 
+			a(href="messages.html") Сообщения
 			a(href="news.html") Новости 
+			a(href="notify.html") Уведомления 
 			a(href="organizations-item.html") Организация 
 			a(href="organizations.html") Организации
 			a(href="reports.html") Отчеты
