--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -55,6 +55,10 @@ i
 	@extend .btn-orange
 	padding 15px 35px
 	font-size 15px
+.btn-orange-wide
+	@extend .btn-orange
+	padding 10px 70px
+	font-size 15px
 .btn-orange-bigm
 	padding 15px 70px
 	font-size 15px
@@ -136,6 +140,10 @@ i
 
 color-orange()
 	color #F85800 
+.font-black
+	color #000
+.fz14
+	font-size 14px
 .inline
 	display inline-block
 	margin-right 20px
@@ -860,7 +868,6 @@ h1.service-title
 			background url("../img/icons/delete-h.png")	center no-repeat;
 	.admin-orders
 		background url("../img/icons/list.png") center no-repeat	
-			
 
 .orders-box
 	z-index 3
@@ -931,6 +938,13 @@ h1.service-title
 		tdn()
 		&:hover
 			color #ff8c4d;
+
+.advsearch-results-info
+	line-height 16px
+	.font-black
+		line-height 20px
+
+
 
 //	ОСНОВНОЙ СЛАЙДЕР
 // ===============================================
